--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Free English Tests for All Levels (A1-C2) | englishtests.online</title>
-    
+
+	<link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
+	
     <!-- Meta Description - Keep between 150-160 characters -->
     <meta name="description" content="Privacy Policy for englishtests.online. Learn how we collect, use, and protect your information when using our free English tests for all CEFR levels.">
     
