--- a/de/englisch-effektiv-lernen.html
+++ b/de/englisch-effektiv-lernen.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effektives Englischlernen | englishtests.online</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     
     <!-- Meta Description - Keep between 150-160 characters -->
     <meta name="description" content="Wie man Englisch effektiv lernt: ein umfassender Leitfaden zum Erlernen der englischen Sprache. Verbessern Sie Ihr Sprechen, Hören, Lesen, Schreiben, Grammatik und Wortschatz mit bewährten Methoden und kostenlosen Ressourcen.">
