--- a/id/findword.html
+++ b/id/findword.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FindWord | Permainan Teka-Teki Kata Harian | englishtests.online</title>
-    
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <!-- Meta Description - Keep between 150-160 characters -->
     <meta name="description" content="Tantang diri Anda dengan FindWord, permainan teka-teki kata harian dengan 144 huruf acak. Temukan kata-kata bahasa Inggris dengan panjang 3-7 huruf dan tingkatkan kosakata serta keterampilan berbahasa Anda.">
     
