--- a/pt-br/findword.html
+++ b/pt-br/findword.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FindWord | Jogo Diário de Palavras | englishtests.online</title>
-   
+   <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <!-- Meta Description - Entre 150-160 caracteres -->
     <meta name="description" content="Desafie-se com o FindWord, um jogo diário de palavras com 144 letras aleatórias. Encontre palavras em inglês de 3 a 7 letras e aprimore seu vocabulário e habilidades linguísticas.">
    
