--- a/zh-CN/findword.html
+++ b/zh-CN/findword.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FindWord | 每日单词拼图游戏 | englishtests.online</title>
-    
+    <link rel="icon" type="image/png" sizes="16x16" href="https://englishtests.online/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://englishtests.online/favicon-32x32.png">
+    <link rel="icon" type="image/svg+xml" href="https://englishtests.online/favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://englishtests.online/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://englishtests.online/favicon-192x192.png">
     <!-- Meta Description - Keep between 150-160 characters -->
     <meta name="description" content="挑战自己，玩FindWord每日单词拼图游戏！在144个随机字母中寻找3-7个字母的英语单词，提高词汇量和拼写能力。">
     
